test/trivial/bradc/readmethod.good
Error: Symbol 'goo' is not defined (readmethod.chpl:2)
