test/trivial/bradc/readmethod.chpl
fun main() {
  var gooResult = goo.read();
}
